--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <head>
   <title>My Linux App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <h1>🚀 My App Running on Nginx</h1>
-  <p>Congratulations! Your app is live.</p>
+  <p>Simple UI test app</p>
+
+  <input id="name" placeholder="Enter your name" />
+  <br><br>
+  <button onclick="sayHello()">Submit</button>
+
+  <p id="output"></p>
+
+  <script src="script.js"></script>
 </body>
 </html>
